--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/money-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cotizador Presupuestos</title>
+  <title>Cotizador Creditos</title>
   <link rel="stylesheet" href="./src/output.css">
 </head>
 
-<body class="bg-gray-50">
+<body class=" flex flex-col min-h-max bg-gray-50">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
